# math

./: CMakeLists.txt  g++.txt  main.cpp  make.cmd
include/: main.h
src/: .main.cpp.swp  ast.cpp  ast.h  main.cpp  main.h  main2.cpp  parser.cpp  parser.h  tags  utils.h
